--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>JuegAlmi</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/comun.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
@@ -28,87 +30,38 @@
       </div>
 
     </div>
-
-
     <div id="cuerpo">
-      <div id="rpg" class="genero">
-        <h2>RPG</h2>
-        <div id="rpg1" class="juego">
-          <img src="images/witcher3.jpg" alt="Portada Witcher 3" class="portadaJuego"/>
-          <h3>Wicther 3</h3>
-          <p>The Witcher 3: Wild Hunt es un videojuego de rol desarrollado y publicado por la compañía polaca CD Projekt RED. Esta compañía es la desarrolladora mientras que la distribución corre a cargo de la Warner Bros. Interactive, en el caso de Norteamérica y Bandai Namco para Europa. Fue anunciado en febrero de 2013 y su lanzamiento tuvo lugar a nivel mundial el 19 de mayo de 2015 para PlayStation 4, Xbox One, Nintendo Switch y Microsoft Windows. El juego es la tercera parte de la saga, precedido por The Witcher y The Witcher 2: Assassins of Kings, las cuales están basadas en la saga literaria de Geralt de Rivia escrita por Andrzej Sapkowski.
-          Precio: <span>25.70$</span>
-          </p>
-
-          <a href="https://es.wikipedia.org/wiki/The_Witcher_3:_Wild_Hunt" target="blank">Más información</a>
-          <div class="floatClear"></div>
-        </div>
-        <div id="rpg2" class="juego">
-          <img src="images/persona5.jpg" alt="Portada Persona 5" class="portadaJuego"/>
-          <h3>Persona 5</h3>
-          <p>Persona 5 (ペルソナ5 Hepburn: Perusona Faibu) es un videojuego de rol desarrollado por Atlus para las consolas PlayStation 3 y PlayStation 4. Cronológicamente se trata del sexto videojuego de la saga Persona, que forma parte de la franquicia Megami Tensei. Fue distribuido por Atlus en Japón y América del Norte, y por Deep Silver en Europa y Australia, teniendo su lanzamiento en Japón el 15 de septiembre de 2016 y el 4 de abril de 2017 en el resto del mundo.1​2​ Una versión extendida del juego con nuevo contenido, Persona 5 Royal (ペルソナ5 ザ・ロイヤル Hepburn: Perusona Faibu Za Roiyaru), fue lanzada para PlayStation 4 en Japón en octubre de 2019 y en el resto del mundo en marzo del 2020
-          Precio: <span>59.90$</span>
-          </p>
-          <a href="https://es.wikipedia.org/wiki/Persona_5" target="blank">Más información</a>
-          <div class="floatClear"></div>
-        </div>
-      </div>
-
-      <div id="estrategia" class="genero">
-        <h2>Estrategia</h2>
-          <div id="estrategia1" class="juego">
-            <img src="images/craft2.jpg" alt="Portada Persona 5" class="portadaJuego"/>
-            <h3>Starcraft II</h3>
-            <p>StarCraft II: Wings of Liberty (traducido como Alas de libertad) es un videojuego de estrategia en tiempo real desarrollado por Blizzard Entertainment para Microsoft Windows y Macintosh. Es la secuela de StarCraft (1998). Fue anunciado el sábado 19 de mayo de 2007 en la convención Blizzard Worldwide Invitational celebrada en Seúl, Corea del Sur. Este juego comenzó a desarrollarse en el verano de 2003, tras el lanzamiento de Warcraft III: The Frozen Throne en manos de un equipo de tan solo 40 personas. La primera beta fue lanzada el 18 de febrero para un grupo selecto de jugadores y la versión terminada fue lanzada mundialmente el 27 de julio de 2010.2​ El juego está dividido en tres capítulos: el juego base, Starcraft II Wings of Liberty, su expansión Heart of the Swarm y su última expansión Legacy of the Void, El actor y narrador Robert Clotworthy Quien vuelve otra vez con la misma voz original del personaje de James Raynor 1998-2015.
-            Precio: <span>20.00$</span>
-            </p>
-            <a href="https://es.wikipedia.org/wiki/StarCraft_II:_Wings_of_Liberty" target="blank">Más información</a>
-            <div class="floatClear"></div>
-          </div>
-
-          <div id="estrategia2" class="juego">
-            <img src="images/aoe.jpg" alt="Portada Persona 5" class="portadaJuego"/>
-            <h3>Age of Empires</h3>
-            <p>Age of Empires (conocida también por las siglas AOE) es una serie de videojuegos de estrategia en tiempo real para computadoras personales, desarrollada en un principio por Ensemble Studios y más tarde por Skybox Labs, y publicada por Xbox Game Studios. El primer título, Age of Empires, apareció en 1997; desde entonces, se han lanzado otros dos títulos y seis expansiones más. Todos ellos cuentan con dos modos principales de juego (mapa aleatorio y campaña) y tratan sobre eventos históricos diferentes.
-            Precio: <span>10.00$</span>
-            </p>
-            <a href="https://es.wikipedia.org/wiki/Age_of_Empires" target="blank">Más información</a>
-            <div class="floatClear"></div>
-          </div>
-      </div>
-
-      <div id="deportes" class="genero">
-        <h2>Deportes</h2>
-          <div id="deportes1" class="juego">
-            <img src="images/2k.jpg" alt="Portada Persona 5" class="portadaJuego"/>
-            <h3>NBA 2k20</h3>
-            <p>NBA 2K20 es un videojuego de simulación de baloncesto desarrollado por Visual Concepts y publicado por 2K Sports, basado en la National Basketball Association. Es la 21ª entrega de la franquicia NBA 2K, la sucesora de NBA 2K19 y la predecesora de NBA 2K21.
-            Precio: <span>20.00$</span>
-            </p>
-            <a href="https://en.wikipedia.org/wiki/NBA_2K20" target="blank">Más información</a>
-            <div class="floatClear"></div>
-          </div>
-
-          <div id="deportes2" class="juego">
-            <img src="images/fut.jpg" alt="Portada Persona 5" class="portadaJuego"/>
-            <h3>PC Futbol 5.0</h3>
-            <p>PC Fútbol 5.0 es un simulador de gestión deportiva de fútbol desarrollado por Dinamic Multimedia. El juego tiene entorno en 3D, y pertenece a la temporada 1996-1997 de la Liga española de fútbol. Además, cuenta con 2 expansiones oficiales, llamadas "eXtensión 1" y "eXtensión 2"
-            Precio: <span>69.90$</span>
-            </p>
-            <a href="https://es.wikipedia.org/wiki/PC_F%C3%BAtbol_5.0" target="blank">Más información</a>
-            <div class="floatClear"></div>
-          </div>
-      </div>
-
-    </div>
-
-    <div id="cuerpo">
-    <h2>RPG</h2>
-    <p>a continuación porros  
-
-
-
-    </div>
+      <h2>rpg</h2>
+       <p>cosas varias si<p>
+         <table>
+           <tr>
+             <th>Nombre</th>
+             <th>compañia</th>
+             <th>argumento</th>
+             <th>gameplay</th>
+             <th>precio</th>
+             <th><span class="glyphicon glyphicon-shopping-cart"></span></th>
+            </tr>
+          <tr>
+            <td>Witcher3</td>
+            <td>CD Project</td>
+            <td>La historia se centra en la grasa </td>
+            <td>va de hacer cosas</td>
+            <td>12.45</td>
+            <td></td>
+            <td><span class="glyphicon glyphicon-shopping-cart"></span></td>
+          </tr>
+          <tr>
+            <td>Dark Souls</td>
+            <td>From Sowftware</td>
+            <td>Morir</td>
+            <td>Existencialismo</td>
+            <td>
+             
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
 
     <div id="pie">
 
